--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tambah_barang">Tambah Barang</string>
+    <string name="memudahkan_petugas_logistik_untuk_melakukan_pengelolaan_data_barang">Memudahkan Petugas Logistik untuk melakukan Pengelolaan data barang</string>
+    <string name="next">NEXT</string>
+    <string name="cari_barang">Cari Barang</string>
+    <string name="memudahkan_petugas_logistik_untuk_melakukan_pencarian_barang">Memudahkan Petugas Logistik untuk melakukan pencarian barang</string>
+    <string name="Keluar" >Keluar Barang</string>
+    <string name="btn_keluar" >NEXT</string>
 </resources>
