--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Warehouse Helper</string>
+    <string name="app_name"></string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -8,6 +8,6 @@
     <string name="next">NEXT</string>
     <string name="cari_barang">Cari Barang</string>
     <string name="memudahkan_petugas_logistik_untuk_melakukan_pencarian_barang">Memudahkan Petugas Logistik untuk melakukan pencarian barang</string>
-    <string name="Keluar" >Keluar Barang</string>
-    <string name="btn_keluar" >NEXT</string>
+    <string name="Keluar">Keluar Barang</string>
+    <string name="btn_keluar">NEXT</string>
 </resources>
