initial commit menambahkan id initial commit menmabahkan ui dashboard initial commit menambahkan code login dan sign up initial commit menambahkan code logout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="email">Email</string>
     <string name="t_reg">Belum punya akun ?</string>
     <string name="bt_reg_login">Sign Up</string>
+    <string name="t_email" />
+    <string name="t_pass" />
+    <string name="t_berhasil">Selamat Datang di Warehouse Helper</string>
+    <string name="bt_logout">"Logout "</string>
 </resources>
