--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name"></string>
-
+    <string name="app_name_dashboard">Warehouse Helper</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tambah_barang">Tambah Barang</string>
@@ -27,4 +27,8 @@
     <string name="bt_logout">"Logout "</string>
     <string name="t_logo">Warehouse Helper</string>
     <string name="t_letstour">Lets Tour !</string>
+    <string name="test_about">Aziz Alfauzi</string>
+    <string name="aboutmenu">About</string>
+    <string name="t_selamat_datang">Selamat</string>
+    <string name="t_datang">Datang</string>
 </resources>
